--- a/src/main/java/adm/WinAdmLogado.form
+++ b/src/main/java/adm/WinAdmLogado.form
@@ -148,7 +148,7 @@
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\monari\Documents\NetBeansProjects\HotelHub-main\images\logo-hoteo.png"/>
+              <Image iconType="1" name="file:/C:/Users/monari/Documents/NetBeansProjects/HotelHub-aaaa/images/logo-hoteo.png"/>
             </Property>
           </Properties>
         </Component>
